WIP: MCP 2026-07-28 and stopping overhaul